mysql/todo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: todonodejs
    name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todonodejs
      name: mysql
  template:
    metadata:
      labels:
        app: todonodejs
        name: mysql
    spec:
      containers:
      - image: registry.redhat.io/rhel8/mysql-80:1
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: db-volume
      volumes:
      - name: db-volume
        emptyDir: {}
      - name: db-init
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todonodejs
    name: mysql
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    name: mysql
