mysql/todo-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: todonodejs
    name: frontend
  namespace: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todonodejs
      name: frontend
  template:
    metadata:
      labels:
        app: todonodejs
        name: frontend
    spec:
      containers:
      - resources:
          limits:
            cpu: '0.5'
        image: quay.io/redhattraining/todo-single:v1.0
        name: todonodejs
        ports:
        - containerPort: 8080
          name: nodejs-http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todonodejs
    name: frontend
  name: frontend
spec:
  ports:
  - port: 8080
  selector:
    name: frontend
