mysql/route-mng.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todonodejs
    name: route-frontend-mng
  name: frontend-mng
  namespace: mysql
spec:
  host: todo.apps.ocp4-mng.example.com
  path: "/todo"
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
