mysql/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
spec:
  host: todo.apps.ocp4-mng.example.com/todo
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080
